--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,15 @@
   margin: 0;
   padding: 0;
   text-decoration: none;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
-/*# sourceMappingURL=style.css.map */
+
+body {
+  background-color: #f4f4f4;
+  font-family: Arial, sans-serif;
+  line-height: 1.6;
+}
+
+.showcase {
+  background-color: #0e6cff;
+}
