--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   text-decoration: none;
+  list-style: none;
   box-sizing: border-box;
 }
 
@@ -11,6 +12,61 @@ body {
   line-height: 1.6;
 }
 
+img {
+  width: 100%;
+}
+
 .showcase {
   background-color: #0e6cff;
+  color: #fff;
+  height: 600px;
+}
+
+.showcase nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.showcase nav ul {
+  display: flex;
+}
+
+.showcase nav li {
+  padding: 15px;
+}
+
+.showcase nav a:hover {
+  color: #ff8700;
+}
+
+.showcase a {
+  color: #fff;
+}
+
+.showcase-content {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.showcase-content img {
+  width: 50%;
+}
+
+.showcase-content h1 {
+  font-size: 50px;
+  line-height: 1.2;
+}
+
+.showcase-content p {
+  margin: 20px 0;
+}
+
+.container {
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 0 30px;
+  overflow: auto;
 }
